--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>19/06/01 23:18:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accountsPageValidation()[pri:0, instance:com.crm.testcases.AccountsPageTest@20e2cbe0]">accountsPageValidation</td> 
-  <td>main@1476394199</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/06/01 23:18:10</td>   <td>-33616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.setup()[pri:0, instance:com.crm.testcases.AccountsPageTest@20e2cbe0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 13:56:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CasePageTest.addCaseTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.testcases.CasePageTest@724af044]">addCaseTest</td> 
+  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 13:55:43</td>   <td>-26267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CasePageTest.setup()[pri:0, instance:com.crm.testcases.CasePageTest@724af044]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 13:56:44</td>   <td>35490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CasePageTest.teardown()[pri:0, instance:com.crm.testcases.CasePageTest@724af044]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
 </table>
