--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7be3c5">  <td>19/06/01 13:35:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PeoplePageTest.addPersonTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.testcases.PeoplePageTest@46d56d67]">addPersonTest</td> 
-  <td>main@1291286504</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>19/06/01 13:36:35</td>   <td>46202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CasePageTest.addPersonTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.testcases.CasePageTest@29ee9faa]">addPersonTest</td> 
-  <td>main@1291286504</td>   <td></td> </tr>
-<tr bgcolor="7be3c5">  <td>19/06/01 13:35:23</td>   <td>-25844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PeoplePageTest.setup()[pri:0, instance:com.crm.testcases.PeoplePageTest@46d56d67]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>19/06/01 13:36:12</td>   <td>23034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CasePageTest.setup()[pri:0, instance:com.crm.testcases.CasePageTest@29ee9faa]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
-<tr bgcolor="7be3c5">  <td>19/06/01 13:36:10</td>   <td>21903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PeoplePageTest.teardown()[pri:0, instance:com.crm.testcases.PeoplePageTest@46d56d67]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/06/02 17:19:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accountsPageValidation()[pri:0, instance:com.crm.testcases.AccountsPageTest@6767c1fc]">accountsPageValidation</td> 
+  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/06/02 17:18:27</td>   <td>-37979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CasePageTest.addCaseTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.testcases.CasePageTest@46d56d67]">addCaseTest</td> 
+  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 17:17:51</td>   <td>-73930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PeoplePageTest.addPersonTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.testcases.PeoplePageTest@14acaea5]">addPersonTest</td> 
+  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 17:17:28</td>   <td>-96945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PeoplePageTest.setup()[pri:0, instance:com.crm.testcases.PeoplePageTest@14acaea5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/06/02 17:18:05</td>   <td>-60101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CasePageTest.setup()[pri:0, instance:com.crm.testcases.CasePageTest@46d56d67]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/06/02 17:18:40</td>   <td>-24906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.setup()[pri:0, instance:com.crm.testcases.AccountsPageTest@6767c1fc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/06/02 17:18:04</td>   <td>-61150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PeoplePageTest.teardown()[pri:0, instance:com.crm.testcases.PeoplePageTest@14acaea5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>19/06/02 17:18:39</td>   <td>-25760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CasePageTest.teardown()[pri:0, instance:com.crm.testcases.CasePageTest@46d56d67]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/06/02 17:19:54</td>   <td>49183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountsPageTest.teardown()[pri:0, instance:com.crm.testcases.AccountsPageTest@6767c1fc]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
 </table>
